# classification-task

./: .buildinfo  .gitignore  README.md  about.html  generate_data.py  genindex.html  index.html  objects.inv  plot.ipynb  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/compare-csv-files/: index.doctree
.doctrees/autoapi/generate_data/: index.doctree
.doctrees/autoapi/generate_predictions/: index.doctree
.doctrees/autoapi/plot_results/: index.doctree
.github/workflows/: package.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/compare-csv-files/: index.rst.txt
_sources/autoapi/generate_data/: index.rst.txt
_sources/autoapi/generate_predictions/: index.rst.txt
_sources/autoapi/plot_results/: index.rst.txt
autoapi/: index.html
autoapi/compare-csv-files/: index.html
autoapi/generate_data/: index.html
autoapi/generate_predictions/: index.html
autoapi/plot_results/: index.html
doc/: conf.py
