[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "generate_data"
authors = [{name = "Gregor Decristoforo", email = "gregor.decristoforo@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "click",
    "numpy",
    "pandas",
]

[project.urls]
Home = "https://github.com/gregordecristoforo/classification-task"

[project.scripts]
example = "example:main"
